--- a/1902.10469/GtH_BH_Erice_2018.tex
+++ b/1902.10469/GtH_BH_Erice_2018.tex
@@ -108,7 +108,7 @@ bookmarksopenlevel=10
 \def\lowerheightfig#1#2#3{\(\raise-#1\hbox{\includegraphics[height=#2]{#3}}\)}
 \def\lowerwidthfig#1#2#3{\(\raise-#1\hbox{\includegraphics[width=#2]{#3}}\)}
 \def\th{\({}^{\mathrm{th}}\)}		 \def\vecc#1{\hskip.08em\vec{#1}\,}
-\def\weglaten#1{}		\def\ul#1{\underline{#1\vphantom{p}}}
+\def\weglaten#1{}		\def\ul#1{{\em #1}}
 \def\BH{{\mathrm{BH}}}\def\Pl{{\mathrm{Pl}}}\def\inn{{\mathrm{in}}} \def\outt{{\mathrm{out}}}
 \def\ds{\displaystyle}
 				%\testprintversion   
@@ -276,11 +276,11 @@ The out-going particles will then be characterised by their positions \(u^-(\W)\
 Note that \emph{very early} in-going particles carry exponentially large values for \(p^-\). By including their contributions we encounter particles going out with hugely varying values of \(u^-_\outt\). This means that many of the out-going particles will emerge at much later or much earlier times \(\t\). When looking at a black hole at given time \(\t\), one only cares about those particles that are visible at finite positions in the relevant section of the Penrose diagram, and we ask how their positions are affected by in-going particles. In more complete treatments of this material we see how all these features can be represented in the appropriate equations.
 \def\spc{\hbox{\qquad}}
 For now, let us expand both \(u^\pm(\W)\) and \(p^\pm(\W)\)  in spherical harmonics, to find:	
-\be \ds u^\pm(\W) =  \sum_{\ell,m}u_{\ell m}Y_{\ell m}(\W)\ , \  &&\spc  p^\pm(\W) =\ \sum_{\ell,m}
+\be \ds u^\pm(\W) =  \sum_{\ell,m}u_{\ell m}Y_{\ell m}(\W)\ , \  &&  p^\pm(\W) =\ \sum_{\ell,m}
 	p^\pm_{\ell m}Y_{\ell m}(\W)\ ; \labell{ellmdef} \\
  \ds [u^\pm(\W),\,p^\mp(\W')] = i\d^2(\W,\,\W')\ ,\ \spc &&    \ [u^\pm_{\ell m},\,p^\mp_{\ell'\,m'}]
 	= i\d_{\ell\ell'}\,\d_{mm'}\ ;\labell{ellmcomm}	\\
- \ds  u^-_{\ell m,\,\outt} = \frac{8\pi G}{\ell^2+\ell+1}\,p^-_{\ell m,\,\inn}\ , &&\ \spc   u^+_{\ell m,\,\inn}
+ \ds  u^-_{\ell m,\,\outt} = \frac{8\pi G}{\ell^2+\ell+1}\,p^-_{\ell m,\,\inn}\ , &&\    u^+_{\ell m,\,\inn}
 	= -\frac{8\pi G}{\ell^2+\ell+1} \, p^+_{\ell m,\,\outt}\ .	\eel{ellmshifts}
 	
 \noindent Here, \(p^\pm_{\ell m}\ =\ \) the total momentum of the  \(^{\outt}_{\inn}\)-particles in the (\(\ell,m\))-mode,
@@ -351,7 +351,7 @@ This is how we get rid of the `firewalls', which for a long time were ill-unders
 
 Regions \(III\) and \(IV\) in the Penrose diagram (Fig.~\ref{Penrose}) never play much of a role. At best, we can sort the particles living there in domains beyond \(t\ra\infty\) or \(\t\ra\-\infty\), so they occupy distinct places of the time coordinate, and consequently there is no need to worry about quantum cloning. For the physics of a black hole at finite time (for the distant observer) we may exclude these particles from consideration.
 
-There are some important warning signs however.  Our procedure has given us the unitary evolution operator, but it is formulated in terms of the \emph{total momentum distribution} \(p^\pm(\tht,\,\vv)\), and the \emph{centre-of-mass positions} \(u^\pm(\tht,\,\vv)\) only. We would need the quantum wave functions as \ul{elements of Fock space} (which would be specified by individual positions or momenta of all particles, as well as other quantum numbers than the geometrical ones). The exact procedure for doing this right has not yet been worked out, but we find the situation to be quite analogous to what we have in string theory amplitudes\,\cite{GtHstrings1, GtHstrings2}; in string theory, the in- and out-going particles are represented as vertex insertions. Here also, only the total momentum counts, but the integration over the vertex positions on the world sheet at the end do give is the individual n-particle states. These amplitudes, at the time, were needed to explain the experimental observations, so we clearly observe how important the experiments have been in this field, and how easy it is to make mistakes when experimental clues are absent.
+There are some important warning signs however.  Our procedure has given us the unitary evolution operator, but it is formulated in terms of the \emph{total momentum distribution} \(p^\pm(\tht,\,\vv)\), and the \emph{centre-of-mass positions} \(u^\pm(\tht,\,\vv)\) only. We would need the quantum wave functions as {\em elements of Fock space} (which would be specified by individual positions or momenta of all particles, as well as other quantum numbers than the geometrical ones). The exact procedure for doing this right has not yet been worked out, but we find the situation to be quite analogous to what we have in string theory amplitudes\,\cite{GtHstrings1, GtHstrings2}; in string theory, the in- and out-going particles are represented as vertex insertions. Here also, only the total momentum counts, but the integration over the vertex positions on the world sheet at the end do give is the individual n-particle states. These amplitudes, at the time, were needed to explain the experimental observations, so we clearly observe how important the experiments have been in this field, and how easy it is to make mistakes when experimental clues are absent.
 
 An other, probably related warning sign is, that we have too many ``microstates". It seems that the total number of Hawking particles involved in a black hole creation and evaporation process is finite, roughly of order \(M_\BH^2\) in Planck units. This will mean in practice that a limit \(\ell<\ell_{\mathrm{max}}\) must be imposed, with \(\ell_{\mathrm{max}}=\OO(M_\BH)\). This is precisely where the gravitational  forces in the transverse direction come in, so that all particles in this domain will tend to become hard. How exactly to impose a constraint here is also not yet well understood.
 
@@ -372,7 +372,7 @@ The above already left us with one general conclusion: region \(II\) should also
 
 Therefore, all eigen values are \(-1\), which implies that \(A=-\mathbb I\), the antipodal mapping. To be precise, we have here the mapping \((\tht,\,\vv)\leftrightarrow (\pi-\tht,\,\vv+\pi)\). Antipodal \emph{identification} only holds for the central point (the origin) of the Penrose diagram. That region, normally having the topology of an \(S_2\) sphere, now is seen to be a \emph{projective sphere}. But relating region \(I\) with the antipodes of region \(II\) means that the mapping from Schwarzschild coordinates to Kruskal-Szekeres coordinates is \ul{one-to-one}, rather than one-to-two (that is, \((r,\,t)\ra (x,\,y)\) \emph{and} \((-x,\,-y)\). This means that we arrived at a new constraint imposed on all general coordinate transformations: 
 
-\begin{quote} \emph{ In  applying general coordinate transformations for quantised fields on a curved space-time background, to use them as a valid model for a physical quantum system, one must demand that the following constraint hold: the mapping must be one-to-one and differentiable.} \end{quote}
+\begin{quote} \emph{In  applying general coordinate transformations for quantised fields on a curved space-time background, to use them as a valid model for a physical quantum system, one must demand that the following constraint hold: the mapping must be one-to-one and differentiable.} \end{quote}
 In particular, this must apply to the asymptotic regions of the surrounding (almost) flat space-time.
 The emergence of a non-trivial topology needs not be completely absurd, as long as no signals can be sent around in loops. This is the case at hand here. Requiring the absence of singularities in the physical domain of space- time forces us to the antipodal folding.
 
