--- a/0710.4345/PRIMER07.tex
+++ b/0710.4345/PRIMER07.tex
@@ -1,6 +1,8 @@
 \documentclass[12pt,oneside]{report} 
-\usepackage{mathpazo}
-\linespread{1.1}
+
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+
 \usepackage[colorlinks=true
 ,urlcolor=blue
 ,anchorcolor=blue
@@ -8,28 +10,38 @@
 ,filecolor=blue
 ,linkcolor=blue
 ,menucolor=blue
-,pagecolor=blue
 ,linktocpage=true]{hyperref}
 \hypersetup{
 bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-\usepackage[letterpaper, margin=1.3in]{geometry}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.1}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
+
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
+%\input{../helpers/revtex-12-fix.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 \usepackage{latexsym}
 \usepackage{graphicx}
 \usepackage{epsf}
 \newcommand{\dessin}[4]{\begin{figure}{\refstepcounter{figure}\label{#3}}\end{figure}%
 \vspace*{12pt}%
-\begin{center}
+\vbox{\begin{center}
 {\hfill\strut \mbox{\includegraphics[scale=#1]%
 {#2}}\strut\hfill}%
 \vspace*{1.5pt}\\ % 
-\strut \\
+\strut\\
 {\hfill\strut{\hbox{\vbox{\raggedright{{\bf Fig. \ref{#3}}\ \sl
 #4}}}\strut}\hfill\strut}\end{center}%
 \strut \\ 
-}%
+}}%
 \newcommand{\dessinbis}[4]{%
 \vspace*{12pt}%
 \begin{center}
@@ -1071,7 +1083,7 @@ that
 \begin{equation}
 |\langle 0,\mbox{out}|0,\mbox{in} \rangle|^2 = {1\over N} = \prod_\omega
 \frac{1}{|\alpha|^2} = \exp - \sum_\omega \ln (1 + |\beta|^2) \label{inout}
-\label{Z}
+%\label{Z}
 \end{equation}
 thereby delivering  the probability to find no pairs at future times.
 
@@ -5214,7 +5226,7 @@ ingoing and an outgoing piece
 \varphi& =& X(v) + \Xi(u) &\quad& {\rm in\ R}
 \label{HR.7}\\
 \varphi &=& \chi( {\cal{V}} ) + \xi( {\cal{U}} ) &\quad& {\rm in\ I}
-\label{HR.8}
+%\label{HR.8}
 \end{array}
 \end{equation}
 where continuity on the star's surface 
@@ -5608,7 +5620,8 @@ the horizon line extended into the origin.
 \dessin{1.000}{NFIG3-5.eps}{pairpen}{The classical trajectory (stationnary phase) of a pair
 produced in the geometry of a collapsing black hole represented on a Penrose
 diagram. Only the member of the pair which reaches ${\cal I}^+$ is on shell,
-the partner falls into the singularity.} 
+the partner falls into the singularity.}
+\newpage 
 \dessin{1.000}{NFIG3-6.eps}{pairedf}{The same as in the previous figure (3.5)
  but in Eddington Finkelstein coordinates.} 
 \dessin{1.000}{NFIG3-7.eps}{pairuv}{Pair
