--- a/0710.4345/PRIMER07.tex
+++ b/0710.4345/PRIMER07.tex
@@ -31,9 +31,10 @@ bookmarksopenlevel=10
 \usepackage{latexsym}
 \usepackage{graphicx}
 \usepackage{epsf}
-\newcommand{\dessin}[4]{\begin{figure}{\refstepcounter{figure}\label{#3}}\end{figure}%
+\newcommand{\dessin}[4]
+{\begin{figure}{\refstepcounter{figure}\label{#3}}\end{figure}%
 \vspace*{12pt}%
-\vbox{\begin{center}
+{\begin{center}
 {\hfill\strut \mbox{\includegraphics[scale=#1]%
 {#2}}\strut\hfill}%
 \vspace*{1.5pt}\\ % 
