--- a/0710.4345/PRIMER07.tex
+++ b/0710.4345/PRIMER07.tex
@@ -31,18 +31,18 @@ bookmarksopenlevel=10
 \usepackage{latexsym}
 \usepackage{graphicx}
 \usepackage{epsf}
+
+\usepackage{chngcntr} 
+\counterwithin{figure}{chapter} 
+
 \newcommand{\dessin}[4]
-{\begin{figure}{\refstepcounter{figure}\label{#3}}\end{figure}%
-\vspace*{12pt}%
-{\begin{center}
-{\hfill\strut \mbox{\includegraphics[scale=#1]%
-{#2}}\strut\hfill}%
-\vspace*{1.5pt}\\ % 
-\strut\\
-{\hfill\strut{\hbox{\vbox{\raggedright{{\bf Fig. \ref{#3}}\ \sl
-#4}}}\strut}\hfill\strut}\end{center}%
-\strut \\ 
-}}%
+{\begin{figure}[tp]\begin{center}
+\includegraphics[scale=#1]{#2}%
+\end{center}
+\caption{#4}
+\label{#3}
+\end{figure}}
+
 \newcommand{\dessinbis}[4]{%
 \vspace*{12pt}%
 \begin{center}
@@ -2726,16 +2726,18 @@ and $\bar A_+(\omega , \tau)$ is given by eq.~(\ref{extrab}) as announced.
 3) $\omega > a^{a\tau / 2}$. Then both gamma functions are
 given by eq.~(\ref{jazz04}) and $A_+$ vanishes once more.
 
-In Fig. \ref{rate} we have plotted a numerical calculation of
+In Fig.~\ref{rate} we have plotted a numerical calculation of
 $\vert \gamma(i\Delta M /a , i \omega a^{-1} e^{a
-\tau/2} ) 
+\tau/2} ) \break
 -\gamma(i\Delta M /a , i \omega a^{-1} e^{-a
 \tau/2} ) \vert^2$ as a function of $\tau$ and $\ln
 \omega$. The plateau of this function when 
 $-a \tau/ 2 < \ln \omega /a < a \tau /2$ is clearly
 apparent. The oscillations on the plateau are due to the fact that the
 adiabatic limit has not been taken  in
-this figure. \dessin{1.000}{NFIG2-2.eps}{rate}{The square of the amplitude $A(\tau , \omega)$ to
+this figure. 
+
+\dessin{1.000}{NFIG2-2.eps}{rate}{The square of the amplitude $A(\tau , \omega)$ to
 have made a transition in time $\tau$ by emitting a photon of
 Minkowski frequency $\omega$. plotted as a funtion of
 $\tau$ and $\ln \omega$.  The plateau that arrises when
@@ -2840,9 +2842,11 @@ that this mirror trajectory has the same expression as an
 inertial trajectory expressed in Rindler coordinates $u,v$ as it approaches the
 future horizon $u=\infty$ (see reference \cite{BD} for a mapping 
 of the one problem into the other by
-a conformal transformation). \dessin{1.000}{NFIG2-3.eps}{ACCEL1}{The mirror trajectory $V_m(U) = - a^{-1} e^{-aU}$ which
-gives rise to a steady thermal flux.} The mirror therefore follows a very
+a conformal transformation). The mirror therefore follows a very
 different trajectory from that of the uniformly accelerated detector.
+
+\dessin{1.000}{NFIG2-3.eps}{ACCEL1}{The mirror trajectory $V_m(U) = - a^{-1} e^{-aU}$ which
+gives rise to a steady thermal flux.}
 
 In order to describe the particles emitted by the mirror it
 is necessary to work in the second quantized context. As in
