--- a/1409.1231/jerusalemarxivfinal.tex
+++ b/1409.1231/jerusalemarxivfinal.tex
@@ -15,7 +15,11 @@ bookmarksopenlevel=10
 %\usepackage{amssymb}
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 
-\usepackage[noBBpl,sc]{mathpazo}
+%\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[largesc]{newpxtext}
+\usepackage{newpxmath}
+\usepackage[cal=cm,bb=ams]{mathalfa}
+
 \linespread{1.1}
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \tolerance=2000
