--- a/1601.02794/Bohrv2.tex
+++ b/1601.02794/Bohrv2.tex
@@ -22,7 +22,7 @@ bookmarksopenlevel=10
 \usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
 \usepackage[type1]{cabin}% sans serif
 \usepackage[charter,vvarbb,scaled=1.07]{newtxmath}
-\usepackage[cal=boondoxo]{mathalfa}
+\usepackage[cal=boondoxo]{mathalpha}
 \linespread{1.05}
 \usepackage[papersize={6.7in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
