--- a/9512027v1/9512027v1.tex
+++ b/9512027v1/9512027v1.tex
@@ -26,7 +26,7 @@ bookmarksopenlevel=10
 \usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
 \usepackage[type1]{cabin}% sans serif
 \usepackage[charter,vvarbb,scaled=1.07]{newtxmath}
-\usepackage[cal=boondoxo]{mathalfa}
+\usepackage[cal=boondoxo]{mathalpha}
 \linespread{1.05}
 \usepackage[letterpaper, margin=1.4in]{geometry}
 
