--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-12-02 07:32:51 -0500 
+%% Created for Pete Su at 2019-12-04 18:09:17 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Giddings:2006sj,
+	Archiveprefix = {arXiv},
+	Author = {Giddings, Steven B.},
+	Date-Added = {2019-12-04 18:09:13 -0500},
+	Date-Modified = {2019-12-04 18:09:13 -0500},
+	Doi = {10.1103/PhysRevD.74.106005},
+	Eprint = {hep-th/0605196},
+	Journal = {Phys. Rev.},
+	Pages = {106005},
+	Primaryclass = {hep-th},
+	Slaccitation = {%%CITATION = HEP-TH/0605196;%%},
+	Title = {{Black hole information, unitarity, and nonlocality}},
+	Volume = {D74},
+	Year = {2006},
+	Bdsk-Url-1 = {https://doi.org/10.1103/PhysRevD.74.106005}}
 
 @inproceedings{Hooft:2019nmf,
 	Archiveprefix = {arXiv},
