--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-12-04 18:09:17 -0500 
+%% Created for Pete Su at 2019-12-04 18:10:02 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Giddings:2011ks,
+	Archiveprefix = {arXiv},
+	Author = {Giddings, Steven B.},
+	Date-Added = {2019-12-04 18:10:01 -0500},
+	Date-Modified = {2019-12-04 18:10:01 -0500},
+	Doi = {10.1103/PhysRevD.85.044038},
+	Eprint = {1108.2015},
+	Journal = {Phys. Rev.},
+	Pages = {044038},
+	Primaryclass = {hep-th},
+	Slaccitation = {%%CITATION = ARXIV:1108.2015;%%},
+	Title = {{Models for unitary black hole disintegration}},
+	Volume = {D85},
+	Year = {2012},
+	Bdsk-Url-1 = {https://doi.org/10.1103/PhysRevD.85.044038}}
 
 @article{Giddings:2006sj,
 	Archiveprefix = {arXiv},
