--- a/hep-th-9508151/9508151.tex
+++ b/hep-th-9508151/9508151.tex
@@ -20,7 +20,8 @@
 % get epsf.tex from hep-th if your dvips is up-to-date but your epsf.tex  %
 % is not.                                                                 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\input harvmac
+\input ../helpers/harvmac-psu
+
 \noblackbox
 \def\Title#1#2{\rightline{#1}\ifx\answ\bigans\nopagenumbers\pageno0\vskip1in
 \else\pageno1\vskip.8in\fi \centerline{\titlefont #2}\vskip .5in}
