--- a/1207.3123/v4Joe.tex
+++ b/1207.3123/v4Joe.tex
@@ -6,6 +6,36 @@
 \usepackage{amssymb}
 \usepackage{amsfonts}
 
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.1}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
+\usepackage[dotinlabels]{titletoc}
+\titlelabel{{\thetitle}.\quad}
+
+\input{../helpers/mnsymbol.tex}
+%\input{../helpers/fix-underbrace.tex}
+%\input{../helpers/revtex-12-fix.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 \newcommand{\sect}[1]{\section{#1}\setcounter{equation}{0}}
 \def\theequation{\thesection.\arabic{equation}}
 \newcommand{\OL}[1]{ \hspace{.5pt}\overline{\hspace{-.5pt}#1
@@ -13,18 +43,8 @@
 \def\gsim{\, \rlap{$>$}{\lower 1.1ex\hbox{$\sim$}}\,}
 \def\lsim{\, \rlap{$<$}{\lower 1.1ex\hbox{$\sim$}}\,}
 
-\textwidth = 6.5 in
-\textheight = 8.5 in
-\oddsidemargin = 0.0 in
-
-\evensidemargin = 0.0 in
-%\topmargin = -1.0 in
-\headheight = 0.0 in
-\headsep = 0.0 in
-\parskip = 0.03in
 %\parindent = 0.0in
 \arraycolsep 2pt
-\renewcommand{\textfraction}{0.00}
 
 \begin{document}
 
