--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-12-04 18:10:02 -0500 
+%% Created for Pete Su at 2019-12-04 20:48:16 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{AMPS:2012rt,
+	Archiveprefix = {arXiv},
+	Author = {Almheiri, Ahmed and Marolf, Donald and Polchinski, Joseph and Sully, James},
+	Date-Added = {2019-12-04 20:47:43 -0500},
+	Date-Modified = {2019-12-04 20:48:16 -0500},
+	Doi = {10.1007/JHEP02(2013)062},
+	Eprint = {1207.3123},
+	Journal = {JHEP},
+	Note = {\href{https://arxiv.org/abs/1207.3123}{arXiv:1207.3123}},
+	Pages = {062},
+	Primaryclass = {hep-th},
+	Slaccitation = {%%CITATION = ARXIV:1207.3123;%%},
+	Title = {{Black Holes: Complementarity or Firewalls?}},
+	Volume = {02},
+	Year = {2013},
+	Bdsk-Url-1 = {https://doi.org/10.1007/JHEP02(2013)062}}
 
 @article{Giddings:2011ks,
 	Archiveprefix = {arXiv},
