--- a/helpers/fixarxiv-charter.tex
+++ b/helpers/fixarxiv-charter.tex
@@ -12,15 +12,17 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 %\usepackage{amssymb}
-\usepackage{charter}% lining figures in math, osf in text
+\usepackage[osf]{XCharter}% lining figures in math, osf in text
 \usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
-\usepackage[type1]{cabin}% sans serif
-\usepackage[charter,vvarbb,scaled=1.07]{newtxmath}
-\usepackage[cal=boondoxo]{mathalpha}
+\usepackage[charter,vvarbb,scaled=1.03,smallerops]{newtxmath}
+%\usepackage[cal=cm]{mathalpha}
 \linespread{1.05}
 \usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
 \tolerance=2000
 \hbadness=2000
 \usepackage[small]{titlesec}
+\usepackage[dotinlabels]{titletoc}
+\titlelabel{{\thetitle}.\quad}
+
 \input{../helpers/fix-underbrace.tex}
