--- a/0506082v2/0506082.tex
+++ b/0506082v2/0506082.tex
@@ -20,13 +20,21 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 %\usepackage{amssymb}
-%\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[noBBpl]{mathpazo}
-\linespread{1.1}
-\usepackage[letterpaper, margin=1.2in]{geometry}
-%\usepackage[papersize={6.5in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\usepackage[osf]{XCharter}% lining figures in math, osf in text
+\usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
+\usepackage[charter,vvarbb,scaled=1.03,smallerops]{newtxmath}
+\usepackage[cal=cm]{mathalpha}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
 \tolerance=2000
+\hbadness=2000
 \usepackage[small]{titlesec}
+\usepackage[dotinlabels]{titletoc}
+\titlelabel{{\thetitle}.\quad}
+
+\input{../helpers/fix-underbrace.tex}
+
 
 \newtheorem{Definition}{Definition}
 \newtheorem{Lemma}{Lemma}
@@ -240,7 +248,7 @@ O}_\mathbf{A}} \newcommand{\PO}{T^*\mathsf{P}^{\mathcal O}}
 %
 % blackboard
 %
-\newcommand{\C}{{\mathbb C}} \newcommand{\D}{{\mathbb D}}
+\renewcommand{\C}{{\mathbb C}} \newcommand{\D}{{\mathbb D}}
 \newcommand{\BP}{{\mathbb P}} \newcommand{\I}{{\mathbb I}}
 \newcommand{\N}{{\mathbb N}} \newcommand{\R}{{\mathbb R}}
 \newcommand{\T}{{\mathbb T}} \newcommand{\Z}{{\mathbb Z}}
