--- a/0506082v2/0506082.tex
+++ b/0506082v2/0506082.tex
@@ -20,9 +20,10 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 %\usepackage{amssymb}
+\usepackage[full]{textcomp}
 \usepackage[osf]{XCharter}% lining figures in math, osf in text
 \usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
-\usepackage[charter,vvarbb,scaled=1.03,smallerops]{newtxmath}
+\usepackage[libertine,vvarbb,scaled=1.03,smallerops,bigdelims]{newtxmath}
 \usepackage[cal=cm]{mathalpha}
 \linespread{1.05}
 \usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
