--- a/0506082v2/0506082-charter.tex
+++ b/0506082v2/0506082-charter.tex
@@ -23,7 +23,7 @@ bookmarksopenlevel=10
 \usepackage[scaled=.98,sups,osf]{XCharter}% lining figures in math, osf in text
 \usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
 \usepackage[type1]{cabin}% sans serif
-\usepackage[libertine,vvarbb,scaled=1.05]{newtxmath}
+\usepackage[charter,vvarbb,scaled=1.05]{newtxmath}
 \usepackage[cal=cm]{mathalfa}
 \linespread{1.05}
 \usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
