--- a/helpers/fixarxiv-px.tex
+++ b/helpers/fixarxiv-px.tex
@@ -14,7 +14,9 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[largesc,osf]{newpxtext}
+\usepackage[smallerops]{newpxmath}
+\usepackage[cal=cm]{mathalfa}% \mathscr is fancier than \mathcal
 \linespread{1.1}
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \tolerance=2000
@@ -23,10 +25,8 @@ bookmarksopenlevel=10
 \usepackage[dotinlabels]{titletoc}
 \titlelabel{{\thetitle}.\quad}
 
-\input{../helpers/mnsymbol.tex}
-\input{../helpers/fix-underbrace.tex}
-\input{../helpers/psu-sc-headers.tex}
-
+%\input{../helpers/mnsymbol.tex}
+%\input{../helpers/fix-underbrace.tex}
 %\input{../helpers/revtex-12-fix.tex}
 %\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
 %\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
