--- a/0506082v2/0506082-pal.tex
+++ b/0506082v2/0506082-pal.tex
@@ -21,7 +21,7 @@ bookmarksopenlevel=10
 }
 %\usepackage{amssymb}
 %\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[noBBpl,osf]{mathpazo}
+\usepackage[noBBpl,sc,osf]{mathpazo}
 \linespread{1.1}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
 \usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
