--- a/0506082v2/0506082-pal.tex
+++ b/0506082v2/0506082-pal.tex
@@ -21,7 +21,7 @@ bookmarksopenlevel=10
 }
 %\usepackage{amssymb}
 %\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[noBBpl,sc,osf]{mathpazo}
+\usepackage[noBBpl,sc]{mathpazo}
 \linespread{1.1}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
 \usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
@@ -341,7 +341,7 @@ THE NETHERLANDS\\
 email \texttt{landsman@math.ru.nl}}
 \date{25 July 2005}
 \maketitle
-\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/psu-headers.tex}
 
 \begin{abstract}
 The relationship between classical and quantum theory is of central importance to the philosophy of physics, and any interpretation of quantum mechanics has to clarify it.   Our discussion of this relationship is partly historical and conceptual, but mostly technical and mathematically rigorous, including over 500 references.  For example, we sketch how certain intuitive ideas of the founders of quantum theory have fared in the light of current mathematical knowledge. One such idea that has certainly stood the test of time is Heisenberg's `quantum-theoretical \textit{Umdeutung} (reinterpretation) of classical observables', which lies at the basis of  quantization theory. Similarly, Bohr's correspondence principle (in somewhat revised form) and Schr\"{o}dinger's wave packets (or coherent states)
