--- a/0506082v2/0506082-pal.tex
+++ b/0506082v2/0506082-pal.tex
@@ -6,6 +6,9 @@
 \usepackage{amssymb}
 \usepackage{enumitem}
 
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+
 \usepackage[colorlinks=true
 ,urlcolor=blue
 ,anchorcolor=blue
@@ -19,19 +22,27 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-%\usepackage{amssymb}
-%\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[noBBpl,sc,osf]{mathpazo}
 \linespread{1.1}
-%\usepackage[letterpaper, margin=1.2in]{geometry}
-\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \tolerance=2000
+\hbadness=2000
+%\usepackage[small]{titlesec}
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+
 \usepackage[small]{titlesec}
-\input{../helpers/mnsymbol.tex}
-\input{../helpers/fix-underbrace.tex}
 \usepackage[dotinlabels]{titletoc}
 \titlelabel{{\thetitle}.\quad}
+\titleformat*{\subsection}{\itshape}
 
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
+
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/revtex-12-fix.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 \newtheorem{Definition}{Definition}
 \newtheorem{Lemma}{Lemma}
 \newtheorem{Theorem}{Theorem}
@@ -326,7 +337,11 @@ $\Box$}\par\vskip\tempskip\vskip\abovedisplayskip\@doendpe}
 \newcommand{\up}{\uparrow}
 \newcommand{\CD}{\mathcal{D}}
 \newcommand{\down}{\downarrow}
+
+
+
 \begin{document}
+
 \setlength{\baselineskip}{1\baselineskip}
 \thispagestyle{empty}
 \title{Between classical and quantum\footnote{To appear in Elsevier's forthcoming  {\it  Handbook of the Philosophy of Science}, Vol.\ 2: {\it Philosophy of Physics} (eds.\ John Earman \&\ Jeremy Butterfield). The author is indebted to  Stephan de Bi\`{e}vre, Jeremy Butterfield, Dennis Dieks, Jim Hartle, Gijs Tuynman, 
@@ -341,7 +356,7 @@ THE NETHERLANDS\\
 email \texttt{landsman@math.ru.nl}}
 \date{25 July 2005}
 \maketitle
-\input{../helpers/psu-headers.tex}
+\input{../helpers/psu-sc-headers.tex}
 
 \begin{abstract}
 The relationship between classical and quantum theory is of central importance to the philosophy of physics, and any interpretation of quantum mechanics has to clarify it.   Our discussion of this relationship is partly historical and conceptual, but mostly technical and mathematically rigorous, including over 500 references.  For example, we sketch how certain intuitive ideas of the founders of quantum theory have fared in the light of current mathematical knowledge. One such idea that has certainly stood the test of time is Heisenberg's `quantum-theoretical \textit{Umdeutung} (reinterpretation) of classical observables', which lies at the basis of  quantization theory. Similarly, Bohr's correspondence principle (in somewhat revised form) and Schr\"{o}dinger's wave packets (or coherent states)
@@ -354,8 +369,10 @@ but in view of the parodies of it one typically finds in the literature we descr
 
 This combination of ideas and techniques does not quite  resolve the measurement problem, but it does  make the point that classicality results from the {\it elimination} of certain states and observables from quantum theory. 
   Thus the classical world is not created by observation (as  Heisenberg once claimed),  but rather by the lack of it.
-  \end{abstract}
-  \newpage\tableofcontents \newpage
+\end{abstract}
+\newpage
+  \tableofcontents
+\newpage
 \begin{quote}
 `But the worst thing is that I am quite unable to clarify the transition [of matrix mechanics] 
 to the classical theory.' 
