--- a/0506082v2/0506082-pal.tex
+++ b/0506082v2/0506082-pal.tex
@@ -34,7 +34,8 @@ bookmarksopenlevel=10
 \usepackage[small]{titlesec}
 \usepackage[dotinlabels]{titletoc}
 \titlelabel{{\thetitle}.\quad}
-\titleformat*{\subsection}{\itshape}
+\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/psu-plain-titles.tex}
 
 \input{../helpers/mnsymbol.tex}
 \input{../helpers/fix-underbrace.tex}
@@ -59,7 +60,8 @@ bookmarksopenlevel=10
 \hyphenation{Mars-den} \hyphenation{co-isotropic}
 % style
 %
-\pagestyle{headings} 
+\pagestyle{headings}
+
 %\newtheorem{Definition}{Definition}[section]
 %\newtheorem{Lemma}[Definition]{Lemma}
 %\newtheorem{Theorem}[Definition]{Theorem}
@@ -356,7 +358,6 @@ THE NETHERLANDS\\
 email \texttt{landsman@math.ru.nl}}
 \date{25 July 2005}
 \maketitle
-\input{../helpers/psu-sc-headers.tex}
 
 \begin{abstract}
 The relationship between classical and quantum theory is of central importance to the philosophy of physics, and any interpretation of quantum mechanics has to clarify it.   Our discussion of this relationship is partly historical and conceptual, but mostly technical and mathematically rigorous, including over 500 references.  For example, we sketch how certain intuitive ideas of the founders of quantum theory have fared in the light of current mathematical knowledge. One such idea that has certainly stood the test of time is Heisenberg's `quantum-theoretical \textit{Umdeutung} (reinterpretation) of classical observables', which lies at the basis of  quantization theory. Similarly, Bohr's correspondence principle (in somewhat revised form) and Schr\"{o}dinger's wave packets (or coherent states)
@@ -504,7 +505,9 @@ Indeed, the modern understanding of the earliest phase of quantum theory is that
   most revolutionary discovery, for what he wrote about his  pertinent paper is not matched in self-confidence by anything he said about relativity:  
  `Sie handelt \"{u}ber die Strahlung und die energetischen Eigenschaften des Lichtes und ist sehr revolution\"{a}r.'\footnote{`[This paper] is about radiation and the energetic properties of light, and is very revolutionary.'  See also the Preface to Pais (1982).} 
 
-Finally, in the light of the present paper, it deserves to be mentioned that Einstein (1905) and Planck (1906) were the first to comment on the classical limit of quantum theory; see the preamble to Section \ref{S5} below. 
+Finally, in the light of the present paper, it deserves to be mentioned that Einstein (1905) and Planck (1906) were the first to comment on the classical limit of quantum theory; see the preamble to Section \ref{S5} below.
+
+ 
 \subsection{Bohr}\label{Bohr1}
  Bohr's brilliant model of the atom reinforced his idea that quantum theory was a theory of quanta.\footnote{Although at the time Bohr followed practically all physicists in their rejection of Einstein's photon, since he believed that during a quantum jump the atom emits  electromagnetic radiation in the form of a spherical wave. His model probably would have gained in consistency by adopting the photon picture of radiation, but in fact Bohr was to be the last prominent opponent of the photon, resisting the idea until 1925. See also Blair Bolles (2004) and footnote \ref{Bohropp} below.\label{BFN1}}
  Since this model simultaneously highlighted the clash between classical and quantum physics {\it and} carried  the germ of a resolution of this conflict through Bohr's equally brilliant correspondence principle, it is worth saying a few words about it here.\footnote{Cf.\ Darrigol (1992) for a detailed treatment; also see  Liboff  (1984) and Steiner (1998).} Bohr's atomic model addressed the radiative instability of Rutherford's solar-system-style atom:\footnote{The solar system provides the popular visualization of Rutherford's atom, but his own picture was more akin to Saturn' rings than to a planet orbiting the Sun.}  according to the electrodynamics of Lorentz, an accelerating electron should radiate, and since the envisaged circular or elliptical motion of an electron around the nucleus is a special case of an accelerated motion, the electron should continuously lose energy and spiral towards the nucleus.\footnote{In addition, any Rutherford style atom with more than one electron is mechanically unstable, since the electrons repel each other, as opposed to planets, which attract each other.}  Bohr countered this instability by three simultaneous moves, each of striking originality:
