--- a/helpers/psu-sc-headers.tex
+++ b/helpers/psu-sc-headers.tex
@@ -13,6 +13,17 @@
         \fi
         #1}}}
         
+\def\ps@headings{%
+    \let\@oddfoot\@empty
+	\def\@oddhead{{\scshape\rightmark}\hfil{\small\scshape\thepage}}%
+    \let\@mkboth\markboth
+    \def\sectionmark##1{%
+      \markright {\MakeLowercase{%
+        \ifnum \c@secnumdepth >\m@ne
+          \thesection\quad
+        \fi
+        ##1}}}}        
+
 \makeatother
 
 
