--- a/helpers/fixarxiv-pal-fancy.tex
+++ b/helpers/fixarxiv-pal-fancy.tex
@@ -14,7 +14,7 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[noBBpl,sc,osf]{mathpazo}
 \linespread{1.1}
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \tolerance=2000
@@ -26,6 +26,9 @@ bookmarksopenlevel=10
 \usepackage[small]{titlesec}
 \usepackage[dotinlabels]{titletoc}
 \titlelabel{{\thetitle}.\quad}
+\titleformat*{\subsection}{\itshape}
+\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/psu-plain-titles.tex}
 
 \input{../helpers/mnsymbol.tex}
 \input{../helpers/fix-underbrace.tex}
