--- a/quant-ph-0506082/0506082.tex
+++ b/quant-ph-0506082/0506082.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt]{article}
+\documentclass[12pt,titlepage]{article}
 %\usepackage{showkeys}
 
 
@@ -61,7 +61,8 @@ bookmarksopenlevel=10
 \newcommand{\supa}{\subparagraph}
 \newcommand{\eo}{\setcounter{equation}{0}}
 %\renewcommand{\theequation}{\thesection.\arabic{equation}}
-\renewcommand{\ll}{\label} \newcommand{\beq}{\begin{equation}}
+%\renewcommand{\ll}{\label} 
+\newcommand{\beq}{\begin{equation}}
 \newcommand{\eeq}{\end{equation}} 
 \newcommand{\bea}{\begin{eqnarray}}
 \newcommand{\eea}{\end{eqnarray}} \newcommand{\nn}{\nonumber}
@@ -2390,8 +2391,8 @@ Various tools for the solution of this problem within the decoherence program  h
 \item Various dynamical regimes haven been unearthed, each of which leads to a different class of robust states (Joos et al., 2003; Zurek, 2003; 
  Schlosshauer, 2004). Here $H_{\CS}$ is the system Hamiltonian, $H_I$ is the interaction Hamiltonian between system and environment, and $H_{\CE}$ is the environment Hamiltonian. As stated, no reference to measurement, object or apparatus need be made here. 
 \begin{itemize}  
-\item In the regime $H_{\CS}<<H_I$, for suitable Hamiltonians  the robust states are the traditional pointer states of quantum measurement theory. This regime conforms to von Neumann's (1932) idea that
-quantum measurements be almost instantaneous. If, moreover, $H_{\CE}<<H_I$ as well -  
+\item In the regime $H_{\CS} \ll H_I$, for suitable Hamiltonians  the robust states are the traditional pointer states of quantum measurement theory. This regime conforms to von Neumann's (1932) idea that
+quantum measurements be almost instantaneous. If, moreover, $H_{\CE} \ll H_I$ as well -  
 with or without a measurement context - 
 then the decoherence mechanism turns out to be universal in being independent of the details of $\CE$ and $H_{\CE}$ (Strunz,  Haake,  \&\ Braun, 2003).
 \item If $H_{\CS}\approx H_I$, then (at least in models of quantum Brownian motion)
@@ -2399,7 +2400,7 @@ the robust states are coherent states (either of the traditional Schr\"{o}dinger
 and Zurek (2003). This case is, of course,  of supreme importance for the physical relevance of the results quoted in our Section \ref{S5} above, and  - if only for this reason - decoherence  theory would benefit from more interaction with mathematically rigorous results  on quantum stochastic analysis.\footnote{Cf.\ Davies (1976), 
  Accardi,  Frigerio, \&\  Lu (1990), Parthasarathy (1992), 
 Streater (2000), K\"{u}mmerer (2002), Maassen (2003), etc. }
-\item Finally, if  $H_{\CS}>> H_I$, then the robust states turn out to be eigenstates of the system Hamiltonian $H_{\CS}$ (Paz \&\ Zurek, 1999; Ollivier, Poulin \&\ Zurek, 2004). In view of our discussion of such states
+\item Finally, if  $H_{\CS} \gg H_I$, then the robust states turn out to be eigenstates of the system Hamiltonian $H_{\CS}$ (Paz \&\ Zurek, 1999; Ollivier, Poulin \&\ Zurek, 2004). In view of our discussion of such states
 in Subsections \ref{WKBS} and \ref{QC}, this shows that robust states are not necessarily classical. It should be mentioned that in this context decoherence theory largely coincides
 with standard atomic physics, in which the atom is taken to be the system $\CS$ and the radiation field plays the role of the environment $\CE$; see  Gustafson \&\ Sigal (2003)
 for a mathematically minded introductory treatment and Bach, Fr\"{o}hlich, \&\  Sigal (1998, 1999) for a full 
