--- a/helpers/fixarxiv-pal-fancy.tex
+++ b/helpers/fixarxiv-pal-fancy.tex
@@ -25,7 +25,7 @@ bookmarksopenlevel=10
 \titlelabel{{\thetitle}.\quad}
 \titleformat*{\subsection}{\itshape}
 \input{../helpers/psu-sc-headers.tex}
-\input{../helpers/psu-plain-titles.tex}
+\input{../helpers/psu-sc-titles.tex}
 
 \input{../helpers/mnsymbol.tex}
 \input{../helpers/fix-underbrace.tex}
