--- a/helpers/fixarxiv-palatino.tex
+++ b/helpers/fixarxiv-palatino.tex
@@ -24,8 +24,8 @@ bookmarksopenlevel=10
 %\titlelabel{{\thetitle}.\quad}
 
 \usepackage[small]{titlesec}
-\usepackage[dotinlabels]{titletoc}
-\titlelabel{{\thetitle}.\quad}
+\usepackage{titletoc}
+\input{../helpers/psu-plain-titles.tex}
 
 \input{../helpers/mnsymbol.tex}
 \input{../helpers/fix-underbrace.tex}
