--- a/helpers/psu-plain-titles.tex
+++ b/helpers/psu-plain-titles.tex
@@ -1,8 +1,8 @@
 \titleformat{\section}[block]
-  {\fillast}
-  {{\large\thesection. }}
+  {\fillast\medskip}
+  {{\thesection. }}
   {1ex minus .1ex}
-  {\large\scshape\MakeLowercase}
+  {\scshape}
  
 \titleformat*{\subsection}{\itshape}
 \titleformat*{\subsubsection}{\itshape}
@@ -12,7 +12,7 @@
 \titlecontents{section}
               [2.3em] 
               {\bigskip}
-              {{\contentslabel{2.3em}}\large\scshape\MakeLowercase}
+              {{\contentslabel{2.3em}}\large\scshape}
               {\hspace*{-2.3em}}
               {\titlerule*[1pc]{}\contentspage}
               
