--- a/quant-ph-0506082/0506082-charter.tex
+++ b/quant-ph-0506082/0506082-charter.tex
@@ -20,7 +20,7 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 %\usepackage{amssymb}
-\usepackage[scaled=.98,sups,osf]{XCharter}% lining figures in math, osf in text
+\usepackage[scaled=.98,sups]{XCharter}% lining figures in math, osf in text
 \usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
 \usepackage[type1]{cabin}% sans serif
 \usepackage[charter,vvarbb,scaled=1.05]{newtxmath}
@@ -33,7 +33,6 @@ bookmarksopenlevel=10
 \usepackage[small]{titlesec}
 \usepackage[dotinlabels]{titletoc}
 \titlelabel{{\thetitle}.\quad}
-\input{../helpers/psu-sc-headers.tex}
 \input{../helpers/psu-plain-titles.tex}
 
 \input{../helpers/fix-underbrace.tex}
