--- a/quant-ph-0506082/0506082-lucida.tex
+++ b/quant-ph-0506082/0506082-lucida.tex
@@ -28,6 +28,8 @@ bookmarksopenlevel=10
 \tolerance=2000
 \hbadness=2000
 \usepackage[small]{titlesec}
+\usepackage{titletoc}
+\input{../helpers/psu-plain-titles.tex}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
 
 % the lucida varphi is hideous
