--- a/quant-ph-0506082/0506082-pal.tex
+++ b/quant-ph-0506082/0506082-pal.tex
@@ -32,8 +32,8 @@ bookmarksopenlevel=10
 %\titlelabel{{\thetitle}.\quad}
 
 \usepackage[small]{titlesec}
-\usepackage[dotinlabels]{titletoc}
-\titlelabel{{\thetitle}.\quad}
+\usepackage{titletoc}
+\input{../helpers/psu-plain-titles.tex}
 
 \input{../helpers/mnsymbol.tex}
 \input{../helpers/fix-underbrace.tex}
