--- a/quant-ph-0506082/0506082.tex
+++ b/quant-ph-0506082/0506082.tex
@@ -22,6 +22,8 @@ bookmarksopenlevel=10
 %\usepackage{amssymb}
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \usepackage[small]{titlesec}
+\usepackage{titletoc}
+\input{../helpers/psu-plain-titles.tex}
 
 \input{../helpers/fix-underbrace.tex}
 
