--- a/1612.09375-ams-ish/BasicCategoryTheory.tex
+++ b/1612.09375-ams-ish/BasicCategoryTheory.tex
@@ -30,7 +30,7 @@ bookmarksopenlevel=10
 }
 %\usepackage{amssymb}
 %\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[noBBpl,osf]{mathpazo}
+\usepackage[noBBpl,osf, sc]{mathpazo}
 \linespread{1.1}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
 \usepackage[papersize={5.9in, 8.5in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
