--- a/1612.09375-ams-ish/BasicCategoryTheory.tex
+++ b/1612.09375-ams-ish/BasicCategoryTheory.tex
@@ -46,15 +46,15 @@ bookmarksopenlevel=10
 \makeatletter
 \AJW@headwidth \textwidth
 \addtolength{\AJW@headwidth}{-\AJW@indent}
-
+  
 \titleformat{\section}[block]
-  {\fillast\medskip}
+  {\fillast}
   {{\thesection. }}
   {1ex minus .1ex}
   {\large\scshape}
   
 \titleformat{\subsection}[block]
-  {\fillast\smallskip}
+  {\fillast}
   {{\thesection. }}
   {1ex minus .1ex}
   {\scshape}
