--- a/1612.09375-ams-ish/BasicCategoryTheory.tex
+++ b/1612.09375-ams-ish/BasicCategoryTheory.tex
@@ -9,8 +9,8 @@
 \documentclass[spanningrule]{cambridge7A} 
 
 \usepackage{titlesec}
-\titlelabel{\thetitle.\quad}
-\usepackage[dotinlabels]{titletoc}
+%\titlelabel{\thetitle.\quad}
+%\usepackage[dotinlabels]{titletoc}
 
 \input{macros}          % Macros
 \input{theoremenvts}    % Theorem environments
@@ -48,25 +48,18 @@ bookmarksopenlevel=10
   
 \titleformat{\section}[block]
   {\fillast}
-  {{\thesection. }}
+  {{\thesection }}
   {1ex minus .1ex}
   {\large\scshape}
   
 \titleformat{\subsection}[block]
   {\fillast}
-  {{\thesection. }}
+  {{\thesection }}
   {1ex minus .1ex}
   {\scshape}
 
 \titleformat*{\subsubsection}{\scshape}
 
-\def\exercises{\section{Exercises}%
-  \addcontentsline{toc}{section}{Exercises}
-  \ifAJW@confsty\else\markright{Exercises}\fi
-  \exerciselistbychapter
-  %\setcounter{equation}{0}
-  %\def\theequation{E\thechapter.\arabic{equation}}
-}
 
 \makeatother
 \raggedbottom
