--- a/1612.09375-ams-ish/BasicCategoryTheory.tex
+++ b/1612.09375-ams-ish/BasicCategoryTheory.tex
@@ -32,7 +32,7 @@ bookmarksopenlevel=10
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[noBBpl,osf, sc]{mathpazo}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
-\usepackage[papersize={5.9in, 8.5in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={5.9in, 8.0in}, left=.5in, right=.5in, top=.8in, bottom=.8in]{geometry}
 \tolerance=2000
 \hbadness=2000
 
